--- a/lib/hello_sockets_web/templates/page/index.html.eex
+++ b/lib/hello_sockets_web/templates/page/index.html.eex
@@ -1,3 +1,8 @@
+<script>
+window.authToken = "<%= assigns[:auth_token] %>"
+window.userId = "<%= assigns[:user_id] %>"
+</script>
+
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
   <p>A productive web framework that<br/>does not compromise speed or maintainability.</p>
